Use URI.created().toURL() instead of new URL()
- URI.created().toURL() is available since Java 1.4
- new URL() (constructor) is deprecated in Java 20

Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>